// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`handles synchronous deployment failures correctly 1`] = `
<div>
  <main
    id="webview-body"
  >
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Deployment Scope
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Subscription Id
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  a790367f-228f-43fd-a660-ed9abb7258ef
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Resource Group
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  mockRg
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Change Scope
          </vscode-button>
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Parameters
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-button
          role="button"
          tabindex="0"
          type="button"
        >
          Pick JSON Parameters File
        </vscode-button>
        <div
          class="sc-cRHGzb wzqlD"
        >
          <vscode-label
            for=""
            id="vscode-label-3"
          >
            fooParam
          </vscode-label>
          <vscode-textfield
            aria-invalid="false"
            internals-valid=""
            type="text"
          />
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Actions
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Deploy
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Validate
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            What-If
          </vscode-button>
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Result
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Deployment Name
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  bicep-deploy-1737601964200
                  <a
                    href="https://portal.azure.com/#@9eeeb42f-40a5-4229-849f-a71fae26c89f/blade/HubsExtension/DeploymentDetailsBlade/overview/id/%2Fsubscriptions%2Fa790367f-228f-43fd-a660-ed9abb7258ef%2FresourceGroups%2FmockRg%2Fproviders%2FMicrosoft.Resources%2Fdeployments%2Fbicep-deploy-1737601964200"
                    style="vertical-align: middle;"
                    title="Open in Portal"
                  >
                    <div
                      aria-hidden="true"
                      class="sc-gnOvAp jiyPEE codicon codicon-globe"
                      data-testid="globe-codicon"
                    />
                  </a>
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Status
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  Failed
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <vscode-checkbox
          aria-checked="false"
          aria-invalid="false"
          aria-label="Show JSON?"
          internals-valid=""
          role="checkbox"
        >
          Show JSON?
        </vscode-checkbox>
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Message
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                Error: Deployment failed
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
  </main>
</div>
`;

exports[`renders the App component with deployment state 1`] = `
<div>
  <main
    id="webview-body"
  >
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Deployment Scope
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Subscription Id
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  a790367f-228f-43fd-a660-ed9abb7258ef
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Resource Group
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  mockRg
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Change Scope
          </vscode-button>
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Parameters
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-button
          role="button"
          tabindex="0"
          type="button"
        >
          Pick JSON Parameters File
        </vscode-button>
        <div
          class="sc-cRHGzb wzqlD"
        >
          <vscode-label
            for=""
            id="vscode-label-1"
          >
            fooParam
          </vscode-label>
          <vscode-textfield
            aria-invalid="false"
            internals-valid=""
            type="text"
          />
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Actions
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Deploy
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Validate
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            What-If
          </vscode-button>
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`renders the loading spinner before initialization 1`] = `
<div>
  <vscode-progress-ring />
</div>
`;

exports[`runs a deployment 1`] = `
<div>
  <main
    id="webview-body"
  >
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Deployment Scope
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Subscription Id
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  a790367f-228f-43fd-a660-ed9abb7258ef
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Resource Group
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  mockRg
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Change Scope
          </vscode-button>
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Parameters
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-button
          role="button"
          tabindex="0"
          type="button"
        >
          Pick JSON Parameters File
        </vscode-button>
        <div
          class="sc-cRHGzb wzqlD"
        >
          <vscode-label
            for=""
            id="vscode-label-2"
          >
            fooParam
          </vscode-label>
          <vscode-textfield
            aria-invalid="false"
            internals-valid=""
            type="text"
          />
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Actions
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Deploy
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Validate
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            What-If
          </vscode-button>
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Result
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Deployment Name
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  bicep-deploy-1737601964200
                  <a
                    href="https://portal.azure.com/#@9eeeb42f-40a5-4229-849f-a71fae26c89f/blade/HubsExtension/DeploymentDetailsBlade/overview/id/%2Fsubscriptions%2Fa790367f-228f-43fd-a660-ed9abb7258ef%2FresourceGroups%2FmockRg%2Fproviders%2FMicrosoft.Resources%2Fdeployments%2Fbicep-deploy-1737601964200"
                    style="vertical-align: middle;"
                    title="Open in Portal"
                  >
                    <div
                      aria-hidden="true"
                      class="sc-gnOvAp jiyPEE codicon codicon-globe"
                      data-testid="globe-codicon"
                    />
                  </a>
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Status
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  Succeeded
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Operations
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-header
            role="rowgroup"
            slot="header"
          >
            <vscode-table-header-cell
              role="columnheader"
              style="width: 20%;"
            >
              Resource Name
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
              style="width: 20%;"
            >
              Resource Type
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
              style="width: 20%;"
            >
              Operation
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
              style="width: 20%;"
            >
              State
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
              style="width: 20%;"
            >
              Status
            </vscode-table-header-cell>
          </vscode-table-header>
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
                style="width: 20%;"
              >
                fooAccount
                <a
                  href="https://portal.azure.com/#@9eeeb42f-40a5-4229-849f-a71fae26c89f/resource/subscriptions/a790367f-228f-43fd-a660-ed9abb7258ef/resourceGroups/mockRg/providers/Microsoft.Storage/storageAccounts/fooAccount"
                  style="vertical-align: middle;"
                  title="Open in Portal"
                >
                  <div
                    aria-hidden="true"
                    class="sc-gnOvAp jiyPEE codicon codicon-globe"
                    data-testid="globe-codicon"
                  />
                </a>
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
                style="width: 20%;"
              >
                Microsoft.Storage/storageAccounts
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
                style="width: 20%;"
              >
                Create
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
                style="width: 20%;"
              >
                Succeeded
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
                style="width: 20%;"
              >
                <pre
                  class="code-wrapped"
                />
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Outputs
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-header
            role="rowgroup"
            slot="header"
          >
            <vscode-table-header-cell
              role="columnheader"
              style="width: 50%;"
            >
              Name
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
              style="width: 50%;"
            >
              Value
            </vscode-table-header-cell>
          </vscode-table-header>
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
                style="width: 50%;"
              >
                foo
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
                style="width: 50%;"
              >
                <pre
                  class="code-wrapped"
                >
                  "bar"
                </pre>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
  </main>
</div>
`;

exports[`supports the scope picker 1`] = `
<div>
  <main
    id="webview-body"
  >
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Deployment Scope
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Subscription Id
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  newSubscriptionId
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Resource Group
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  newResourceGroup
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Change Scope
          </vscode-button>
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Parameters
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-button
          role="button"
          tabindex="0"
          type="button"
        >
          Pick JSON Parameters File
        </vscode-button>
        <div
          class="sc-cRHGzb wzqlD"
        >
          <vscode-label
            for=""
            id="vscode-label-6"
          >
            fooParam
          </vscode-label>
          <vscode-textfield
            aria-invalid="false"
            internals-valid=""
            type="text"
          />
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Actions
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Deploy
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Validate
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            What-If
          </vscode-button>
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`validates a deployment 1`] = `
<div>
  <main
    id="webview-body"
  >
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Deployment Scope
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Subscription Id
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  a790367f-228f-43fd-a660-ed9abb7258ef
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Resource Group
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  mockRg
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Change Scope
          </vscode-button>
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Parameters
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-button
          role="button"
          tabindex="0"
          type="button"
        >
          Pick JSON Parameters File
        </vscode-button>
        <div
          class="sc-cRHGzb wzqlD"
        >
          <vscode-label
            for=""
            id="vscode-label-4"
          >
            fooParam
          </vscode-label>
          <vscode-textfield
            aria-invalid="false"
            internals-valid=""
            type="text"
          />
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Actions
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Deploy
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Validate
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            What-If
          </vscode-button>
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Result
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Status
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  Failed
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <vscode-checkbox
          aria-checked="false"
          aria-invalid="false"
          aria-label="Show JSON?"
          internals-valid=""
          role="checkbox"
        >
          Show JSON?
        </vscode-checkbox>
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Code
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                InvalidTemplate
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Message
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                The template is invalid
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
  </main>
</div>
`;

exports[`what-ifs a deployment 1`] = `
<div>
  <main
    id="webview-body"
  >
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Deployment Scope
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Subscription Id
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  a790367f-228f-43fd-a660-ed9abb7258ef
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Resource Group
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  mockRg
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Change Scope
          </vscode-button>
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Parameters
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-button
          role="button"
          tabindex="0"
          type="button"
        >
          Pick JSON Parameters File
        </vscode-button>
        <div
          class="sc-cRHGzb wzqlD"
        >
          <vscode-label
            for=""
            id="vscode-label-5"
          >
            fooParam
          </vscode-label>
          <vscode-textfield
            aria-invalid="false"
            internals-valid=""
            type="text"
          />
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Actions
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Deploy
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Validate
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            What-If
          </vscode-button>
        </div>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          Result
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Status
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  Succeeded
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
    <section>
      <vscode-divider
        role="separator"
      />
      <div
        class="sc-kFkjun evplKm"
      >
        <div
          aria-hidden="true"
          class="sc-gnOvAp FKHEF codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3
          class="sc-jRLeyu eNRkQB"
        >
          What-If Changes
        </h3>
      </div>
      <div
        class="sc-ihGilW jRRATf"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-header
            role="rowgroup"
            slot="header"
          >
            <vscode-table-header-cell
              role="columnheader"
              style="width: 33.333333333333336%;"
            >
              Resource Id
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
              style="width: 33.333333333333336%;"
            >
              Change Type
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
              style="width: 33.333333333333336%;"
            >
              Changes
            </vscode-table-header-cell>
          </vscode-table-header>
          <vscode-table-body
            role="rowgroup"
            slot="body"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
                style="width: 33.333333333333336%;"
              >
                /subscriptions/a790367f-228f-43fd-a660-ed9abb7258ef/resourceGroups/mockRg/providers/Microsoft.Storage/storageAccounts/fooAccount
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
                style="width: 33.333333333333336%;"
              >
                Create
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
                style="width: 33.333333333333336%;"
              >
                <vscode-table
                  role="table"
                >
                  <vscode-table-header
                    role="rowgroup"
                    slot="header"
                  >
                    <vscode-table-header-cell
                      role="columnheader"
                      style="width: 50%;"
                    >
                      Path
                    </vscode-table-header-cell>
                    <vscode-table-header-cell
                      role="columnheader"
                      style="width: 50%;"
                    >
                      Change Type
                    </vscode-table-header-cell>
                  </vscode-table-header>
                  <vscode-table-body
                    role="rowgroup"
                    slot="body"
                  >
                    <vscode-table-row
                      role="row"
                    >
                      <vscode-table-cell
                        role="cell"
                        style="width: 50%;"
                      >
                        properties
                      </vscode-table-cell>
                      <vscode-table-cell
                        role="cell"
                        style="width: 50%;"
                      >
                        Create
                      </vscode-table-cell>
                    </vscode-table-row>
                  </vscode-table-body>
                </vscode-table>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
  </main>
</div>
`;
